@@ -775,6 +775,7 @@ is <A HREF="http://linuxvm.org/">http://linuxvm.org/</A>
 <li>Extract-CPU-Time Facility</li>
 <li>Conditional-SSKE Facility</li>
 <li>Compare-and-Swap-and-Store Facility</li>
+<li>General-Instructions-Extension Facility
 <li>Parsing-Enhancement Facility
 </ul>
 
@@ -784,7 +785,6 @@ is <A HREF="http://linuxvm.org/">http://linuxvm.org/</A>
 <li>Configuration-Topology Facility
 <li>Enhanced-DAT Facility
 <li>Execute-Extensions Facility
-<li>General-Instructions-Extension Facility
 <li>HFP-Unnormalized-Extensions Facility
 <li>Move-with-Optional-Specifications Facility
 <li>PFPO Facility
