@@ -1,3 +1,4 @@
+08 Mar 2008 General Instructions Extension Facility - Roger Bowler
 07 Mar 2008 Add pri, sec, home options [P|S|H] to "v" command - Paul Leisy
 05 Mar 2008 Fix PLO fc=3 fc=19 and qword alignment chks - Paul Leisy
 04 Mar 2008 Fix CFC cond code - fetch right operand size - Paul Leisy
